# ROS2-mujoco-UUVsimulator

./: .gitignore  .gitmodules  LOCAL_WORKLOG_KR.txt  README.md
codemanual/: UUV_v2.2_4CORE_IMPLEMENTATION_MANUAL_KR.md
kmu_hit25_ros2_ws/.tmp/hit25_auv_rehearsul/hit25_auv/: CMakeLists.txt  package.xml
kmu_hit25_ros2_ws/.tmp/hit25_auv_rehearsul/hit25_auv/include/: abs_target_compansator.hpp  map2auv_map_tf.hpp  rel_target_compansator.hpp
kmu_hit25_ros2_ws/.tmp/hit25_auv_rehearsul/hit25_auv/launch/: auv_controller_test.launch  auv_start.launch  control_pc_gui.launch  mission_start.launch  rov_start.launch  rov_with_rviz.launch
kmu_hit25_ros2_ws/.tmp/hit25_auv_rehearsul/hit25_auv/msg/: MissionStatus.msg
kmu_hit25_ros2_ws/.tmp/hit25_auv_rehearsul/hit25_auv/scripts/: auv_setpoint_sender.py  auv_state_gui.py  battery_gui.py  buoy_mission.py  controller.py  dronecan2mavros_battery.py  gate_mission.py  hydrophone_mission.py  line_qr_mission.py  main_node.py  map_odom_broadcaster.py  object_detector.py  ref_point_marker_node.py  return_mission.py  rov_tf_broadcaster.py  setpoint_cli.py  trajectory_calculator.py  vision_converter.py
kmu_hit25_ros2_ws/.tmp/hit25_auv_rehearsul/hit25_auv/src/: cam2baselink_static_tf.cpp  guided_control.cpp  guided_setpoint_yaw.cpp  guided_setposition.cpp  joy2mavros.cpp  odom2mavros.cpp  vfr2atm_pressure.cpp
kmu_hit25_ros2_ws/ardupilot/Tools/ros2/ardupilot_dds_tests/: setup.cfg  setup.py
kmu_hit25_ros2_ws/ardupilot/libraries/AP_DDS/: AP_DDS_Client.cpp  AP_DDS_ExternalControl.cpp
kmu_hit25_ros2_ws/docs/: PORTING_GUIDE.md
kmu_hit25_ros2_ws/repos/: kmu_hit25_external.repos
kmu_hit25_ros2_ws/scripts/: build_sitl.sh  docker_build_sitl_image.sh  package_release.sh  run_ardusub_json_sitl.sh  setup_ubuntu_humble.sh
kmu_hit25_ros2_ws/src/hit25_auv/: CMakeLists.txt  package.xml  setup.cfg  setup.py
kmu_hit25_ros2_ws/src/hit25_auv/config/: .gitkeep
kmu_hit25_ros2_ws/src/hit25_auv/include/: baselink2auv_baselink_tf.hpp
kmu_hit25_ros2_ws/src/hit25_auv/launch/: auv_controller_test.launch.py  auv_start.launch.py  control_pc_gui.launch.py  mission_plan_buoy.launch.py  mission_start.launch.py  rov_start.launch.py  rov_with_rviz.launch.py
kmu_hit25_ros2_ws/src/hit25_auv/msg/: AuvSetpoint.msg  YawBias.msg  YawControlDebug.msg
kmu_hit25_ros2_ws/src/hit25_auv/rviz/: auv_view.rviz  rov.rviz
kmu_hit25_ros2_ws/src/hit25_auv/scripts/: __init__.py  auv_setpoint_sender.py  auv_state_gui.py  battery_gui.py  buoy_mission.py  controller.py  dronecan2mavros_battery.py  gate_mission.py  hydrophone_mission.py  line_qr_mission.py  main_node.py  map_odom_broadcaster.py  object_detector.py  profilers.py  ref_point_marker_node.py  return_mission.py  rov_tf_broadcaster.py  setpoint_cli.py  trajectory_calculator.py  vision_converter.py
kmu_hit25_ros2_ws/src/hit25_auv/src/: cam2baselink_static_tf_node.cpp  guided_control_node.cpp  guided_setpoint_yaw_node.cpp  guided_setposition_node.cpp  joy2mavros_node.cpp  odom2mavros_node.cpp  vfr2atm_pressure_node.cpp
kmu_hit25_ros2_ws/src/hit25_auv/urdf/: rov.urdf  rov_clean.urdf
kmu_hit25_ros2_ws/src/hit25_interpreter/: CMakeLists.txt  package.xml  start_interpreter.sh
kmu_hit25_ros2_ws/src/hit25_interpreter/launch/: interpreter.launch  interpreter.launch.py
kmu_hit25_ros2_ws/src/hit25_interpreter/models/: pt2openvino.py
kmu_hit25_ros2_ws/src/hit25_interpreter/models/0906best_openvino_model/: 0906best.xml  metadata.yaml
kmu_hit25_ros2_ws/src/hit25_interpreter/models/1112best_openvino_model/: 1112best.xml  metadata.yaml
kmu_hit25_ros2_ws/src/hit25_interpreter/models/1122best_openvino_model/: metadata.yaml
kmu_hit25_ros2_ws/src/hit25_interpreter/models/1123best_openvino_model/: metadata.yaml
kmu_hit25_ros2_ws/src/hit25_interpreter/msg/: DetectedObject.msg  HydrophoneData.msg  VisionData.msg
kmu_hit25_ros2_ws/src/hit25_interpreter/scripts/: hydrophone_analyzer_node.py  vision_interpreter_node.py  vision_interpreter_node_right_start.py
kmu_hit25_ros2_ws/tools/Micro-XRCE-DDS-Gen/scripts/: microxrceddsgen
mujoco/uuv_mujoco/v2.2/: README.md  competition_scene.xml  launch_competition_sim.sh  ros2_bridge.py  run_urdf_full.py  sim_profiles.json  urdf_full_scene.xml
mujoco/uuv_mujoco/v2.2/validation/: forward_step.csv  heave_step.csv  summary.json  thruster_single.csv  validation_report.json  yaw_step.csv
scripts/: capture_mujoco_video.py  check_sitl_manual_input.py  launch_stack_auto.sh  stack_reset.sh  start_full_stack_direct.sh  sync_and_push.sh
