[develop]
script_dir=$base/lib/hit25_auv
[install]
install_scripts=$base/lib/hit25_auv

[options.entry_points]
console_scripts =
  main_node = hit25_auv.main_node:main
  rov_tf_broadcaster = hit25_auv.rov_tf_broadcaster:main
  ref_point_marker_node = hit25_auv.ref_point_marker_node:main
  setpoint_cli = hit25_auv.setpoint_cli:main
  controller = hit25_auv.controller:main
  buoy_mission = hit25_auv.buoy_mission:main
  gate_mission = hit25_auv.gate_mission:main
  line_qr_mission = hit25_auv.line_qr_mission:main
  hydrophone_mission = hit25_auv.hydrophone_mission:main
  return_mission = hit25_auv.return_mission:main
  dronecan2mavros_battery = hit25_auv.dronecan2mavros_battery:main
  battery_gui = hit25_auv.battery_gui:main
  auv_state_gui = hit25_auv.auv_state_gui:main
